# msdf-atlas-gen

./: .gitignore  .gitmodules  CMakeLists.txt  CompileAll.bat  msdf-atlas-gen.sln
msdf-atlas-gen/: image-encode.h  image-save.h  image-save.hpp
project/: main.cpp  msdf-atlas-gen.vcxproj  msdf-atlas-gen.vcxproj.filters
